# fge-read-crime-conditions

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
prompt/: prompt_config.json
prompt/reference/: condition.txt  template.txt
src/: 0_update_prompt_config.py  1_generate_prompts.py  2_process_ollama.py  3_create_summary.py  __init__.py
src/utils/: __init__.py  ollama_client.py  prompt_builder.py
